--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,233 +1,353 @@
-.chat-col{
-    right: -100vw;
-    bottom: 0;
-    top: 40.5px;
-    z-index: 1000;
-    position: fixed;
-    color: #fff;
-    padding-right: 5px;
-    padding-left: 5px;
-    padding-bottom: 40px;
-    padding-top: 15px;
-    min-height: 100vh;
+:root {
+    --body-bg: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    --msger-bg: #fff;
+    --border: 2px solid #ddd;
+    --left-msg-bg: #cac8c8;
+    --right-msg-bg: #579ffb;
+  }
+
+.chat-col {
+  right: -100vw;
+  bottom: 0;
+  top: 40.5px;
+  z-index: 1000;
+  position: fixed;
+  color: #fff;
+  padding-left: 0px;
+  padding-bottom: 25px;
+  min-height: 100vh;
 }
 
 .chat-col.chat-opened {
-    right: 0;
-    overflow-y: auto;
-    overflow-x: hidden;
-    transition: all 0.3s ease !important;
-    -webkit-transition: all 0.3s ease !important;
-    -moz-transition: all 0.3s ease !important;
+  right: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  transition: all 0.3s ease !important;
+  -webkit-transition: all 0.3s ease !important;
+  -moz-transition: all 0.3s ease !important;
 }
 
-#chat-messages{
-    height: 70vh;
-    margin-bottom: 20px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none;  /* IE 10+ */
+/* #chat-messages {
+  margin-top: 1.5rem;
+  height: 70vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  scrollbar-width: none; 
+  -ms-overflow-style: none; 
+}*/
+
+/* #chat-messages::-webkit-scrollbar {
+  width: 0px; 
+  background: transparent;
+}  */
+
+.fixed {
+  transform: translateY(130px);
 }
 
-#chat-messages::-webkit-scrollbar {
-    width: 0px;  /* remove scrollbar space */
-    background: transparent;
+.chat-box {
+  bottom: 30px;
+  right: 0;
+  position: absolute;
+  border: 0;
+  border-top: 1px groove white;
+  border-left: 1px groove white;
+  font-size: small;
 }
 
-.chat-box{
-    bottom: 30px;
-    right: 0;
-    position: absolute;
-    border: 0;
-    border-top: 1px groove white;
-    border-left: 1px groove white;
-    font-size: small;
-}
-
-.chat-box::placeholder{
-    font-size: small;
-    font-weight: lighter;
-    font-style: italic;
+.chat-box::placeholder {
+  font-size: small;
+  font-weight: lighter;
+  font-style: italic;
 }
 
 .chat-box,
-.chat-box:focus{
-    resize: none !important;
-    box-shadow: none !important;
+.chat-box:focus {
+  resize: none !important;
+  box-shadow: none !important;
 }
 
-.chat-row{
-    height: 100%;
-    overflow-x: scroll;
+.chat-row {
+  height: 100%;
+  overflow-x: scroll;
 }
 
-.main{
-    padding-top: 40px;
+.main {
+  padding-top: 40px;
 }
 
-
-.remote-video{
-    width:100%;
-    height:auto;
-    max-height: 90vh;
+.remote-video {
+  width: 100%;
+  height: auto;
+  max-height: 90vh;
 }
 
-
-.remote-video-controls{
-    position:absolute;
-    bottom: 50%;
-    background-color:rgba(0, 0, 0, 0.0);
-    z-index:300000;
-    padding: 10px;
-    width: 100%;
-    text-align: center;
-    visibility: hidden;
+.remote-video-controls {
+  position: absolute;
+  bottom: 50%;
+  background-color: rgba(0, 0, 0, 0);
+  z-index: 300000;
+  padding: 10px;
+  width: 100%;
+  text-align: center;
+  visibility: hidden;
 }
-
 
 .remote-video:hover + .remote-video-controls,
-.remote-video-controls:hover{
-    visibility: visible;
+.remote-video-controls:hover {
+  visibility: visible;
 }
 
-
-.local-video{
-    bottom: 0;
-    left: 0;
-    position: fixed;
-    width:100%;
-    height: 100%;
+.local-video {
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
 }
 
-
-.mirror-mode{
-    -ms-transform: scaleX(-1);
-    -moz-transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
+.mirror-mode {
+  -ms-transform: scaleX(-1);
+  -moz-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
 }
 
-
-.sender-info{
-    font-size: smaller;
-    margin-top: 5px;
-    align-self: flex-end;
+.sender-info {
+  font-size: smaller;
+  margin-top: 5px;
+  align-self: flex-end;
 }
 
-
-.msg{
-    font-weight: 400;
-    font-size: 12px;
-    color: black;
-    background-color: wheat;
+.msg {
+  font-weight: 400;
+  font-size: 12px;
+  color: black;
+  background-color: rgb(230, 230, 230);
 }
 
-
-.chat-card{
-    border-radius: 6px;
+.chat-card {
+  border-radius: 6px;
 }
 
-
-.btn-no-effect:focus{
-    box-shadow: none;
+.btn-no-effect:focus {
+  box-shadow: none;
 }
 
-.very-small{
-    font-size: 6px !important;
+.very-small {
+  font-size: 6px !important;
 }
-
 
 #close-single-peer-btn {
-    position: fixed;
-    top: 0;
-    text-align: center;
-    background: rgba(0, 0, 0, 0.5);
-    color: #f1f1f1;
-    border-radius: 0%;
-    z-index: 100;
+  position: fixed;
+  top: 0;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  border-radius: 0%;
+  z-index: 100;
 }
 
-
-.pointer{
-    cursor: pointer;
+.pointer {
+  cursor: pointer;
 }
 
-
-.record-option{
-    height: 200px;
-    border-radius: 10%;
-    border: 1px solid #0072bf;
-    cursor: pointer;
-    padding: 10px;
-    vertical-align: middle;
+.record-option {
+  height: 200px;
+  border-radius: 10%;
+  border: 1px solid #0072bf;
+  cursor: pointer;
+  padding: 10px;
+  vertical-align: middle;
 }
-
 
 .custom-modal {
-    display: none;
-    position: fixed;
-    z-index: 10000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
+  display: none;
+  position: fixed;
+  z-index: 10000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
 }
-
 
 .custom-modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #0072bf;
-    width: 80%;
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #0072bf;
+  width: 80%;
 }
-
 
 @keyframes animatetop {
-    from {top: -300px; opacity: 0}
-    to {top: 0; opacity: 1}
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .chat-col {
+    right: -100vw;
+    width: 100vw;
+    z-index: 99999;
+    transition: 0.3s;
+    top: 47px;
+  }
+
+  .chat-opened::-webkit-scrollbar {
+    display: none;
+  }
+
+/*   #chat-messages {
+    margin-top: 0.2rem;
+    height: 62vh;
+  } */
+
+  .chat-box {
+    bottom: 90px;
+    margin-bottom: 0px;
+  }
+
+  .card-sm {
+    max-width: 100%;
+    min-width: 50%;
+  }
+
+  .local-video {
+    width: 40vw;
+  }
+
+  .fixed {
+    position: fixed;
+    transform: translateY(0px);
+  }
+}
+
+@media (min-width: 768px) {
+  .card {
+    width: 50%;
+    z-index: 1000;
+  }
 }
 
 
-@media only screen and (max-width:767px){
-    .chat-col{
-        right: -100vw;
-        width: 100vw;
-        z-index: 99999;
-        transition: 0.3s;
-        top: 47px;
-    }
+.msger {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 867px;
+    margin: 25px 10px;
+    height: calc(100% - 50px);
+    border: var(--border);
+    border-radius: 5px;
+    background: var(--msger-bg);
+    box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2);
+  }
   
-    .chat-opened::-webkit-scrollbar {
-        display: none;
-    }
-
-    #chat-messages{
-        height: 60vh;
-    }
-
-    .chat-box{
-        bottom: 90px;
-        margin-bottom: 0px;
-    }
-    
-    .card-sm{
-        max-width: 100%;
-        min-width: 50%;
-    }
-
-
-    .local-video{
-        width:40vw;
-    }
-}
-
-
-@media (min-width:768px){
-    .card{
-        width: 50%;
-        z-index: 1000;
-    }
-}
+  .msger-chat {
+    flex: 1;
+    overflow-y: auto;
+    padding: 10px;
+  }
+  .msger-chat::-webkit-scrollbar {
+    width: 6px;
+  }
+  .msger-chat::-webkit-scrollbar-track {
+    background: #ddd;
+  }
+  .msger-chat::-webkit-scrollbar-thumb {
+    background: #bdbdbd;
+  }
+  .msg {
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 10px;
+  }
+  .msg:last-of-type {
+    margin: 0;
+  }
+  .msg-img {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    background: #ddd;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border-radius: 50%;
+  }
+  .msg-bubble {
+    max-width: 450px;
+    padding: 15px;
+    border-radius: 15px;
+    background: var(--left-msg-bg);
+  }
+  .msg-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  .msg-info-name {
+    margin-right: 10px;
+    font-weight: bold;
+  }
+  .msg-info-time {
+    font-size: 0.85em;
+  }
+  
+  .left-msg .msg-bubble {
+    border-bottom-left-radius: 0;
+  }
+  
+  .right-msg {
+    flex-direction: row-reverse;
+  }
+  .right-msg .msg-bubble {
+    background: var(--right-msg-bg);
+    color: #fff;
+    border-bottom-right-radius: 0;
+  }
+  .right-msg .msg-img {
+    margin: 0 0 0 10px;
+  }
+  
+  .msger-inputarea {
+    display: flex;
+    padding: 10px;
+    border-top: var(--border);
+    background: #eee;
+  }
+  .msger-inputarea * {
+    padding: 10px;
+    border: none;
+    border-radius: 3px;
+    font-size: 1em;
+  }
+  .msger-input {
+    flex: 1;
+    background: #ddd;
+  }
+  .msger-send-btn {
+    margin-left: 10px;
+    background: rgb(0, 196, 65);
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.23s;
+  }
+  .msger-send-btn:hover {
+    background: rgb(0, 180, 50);
+  }
+  
+  .msger-chat {
+    background-color: rgb(230, 230, 230);
+  }
+  
